2008-04-10  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkPointer.c (Tk_UpdatePointer): use all 5 buttons.

	* generic/tkMenu.c (PostProcessEntry): delay call to
	TkpConfigureMenuEntry() until all menu entry attributes are setup.

	* library/menu.tcl (::tk::MbPost): fix error thrown in y position
	computation with indicatoron.

	* generic/tkMenubutton.c: s/DEF_BUTTON_JUSTIFY/DEF_MENUBUTTON_JUSTIFY/

	* generic/tkBind.c (HandleEventGenerate): ensure window exists before
	generating an event for it (fixes testsuite crash).

	* generic/tkTextBTree.c (TkBTreeDeleteIndexRange): add bounds check
	to startEnd array access (fixes testsuite crash).

	* tests/unixFont.test: only use xlsfonts with X11 windowingsystem.

2009-04-10  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvPs.c (TkPostscriptInfo): [Bug 1466509]: Eliminate old
	and misleading comments mentioning prolog.ps.
	* generic/prolog.ps, library/prolog.ps: Remove unused files.
	* unix/Makefile.in, win/Makefile.in: Stop building distributions that
	include the removed files or trying to install them.

	* library/tk.tcl: [Bug 2116837]: Add event definitions to handle the
	standard virtual events when Caps Lock is on.

2009-04-03  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bug 1789819]: Don't Panic.

2009-03-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkTheme.c (BuildOptionMap, NewElementImpl):
	[Bug 2178820]: Ensure that zero-size allocations don't happen; some
	malloc implementations don't like it at all.

	* win/wish.exe.manifest.in: [Bug 1871101]: Add magic to make Tk not be
	blurred on Vista with large fonts.

2009-03-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkFileFilter.c: Backported some fixes for uninitialized
	* generic/tkFont.c:       variables identified by das using clang
	* generic/tkListbox.c:    analysis.

2009-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
